# NeuralNetwork-AG

./: .gitignore  CMakeLists.txt  Makefile  README.md  main_v2.cpp  mainvelha2.cpp  velha2
AG/: Makefile
AG (falta testar)/evol_data/: bestInfo.txt
AG (falta testar)/include/: geneticAlgorithm.h  input.h  typeEvolvable.h  util.h
AG (falta testar)/src/: geneticAlgorithm.c  type.c
AG/evol_data/: bestInfo.txt  history.csv
AG/include/: funcaoEscrota.h  geneticAlgorithm.h  input.h  type.h  typeEvolvable.h  util.h
AG/src/: funcaoEscrota.c  geneticAlgorithm.c  input.c  main.c  network.cpp  sla.c  sla.cpp  typeEvolvable.c  util.c
Game/: Makefile
Game/include/: ConnectFour.h  TicTacToe.h  TwoPlayerGame.h
Game/src/: ConnectFour.cpp  TicTacToe.cpp  TwoPlayerGame.cpp  main.cpp
Player/: Makefile
Player/include/: DenseNetwork.h  Player-inl.cpp  Player.h  neural_network.h
Player/src/: DenseNetwork.cpp  Player.cpp  main.cpp  mainTestGame.cpp  neural_network.cpp
app/: test.cpp  train.cpp
data/: 1_b1.txt  1_b2.txt  1_w1.txt  1_w2.txt  2_b1.txt  2_b2.txt  2_w1.txt  2_w2.txt
evol_data/: bestInfo.txt  history.csv
game/: main.c  main_v2.cpp
include/: matrix_operations.h  neural_network.h  velha.h  velha2.h
interface/: Makefile
interface/aginterface/: Screen.go
python_plot_history/: python_plot_history.py
single/: main.c
src/: initialization.c  neural_network.cpp  operations.c  velha.c  velha2.cpp
